"Ready to Serve"

--- a/app/src/main/res/layout/fragment_search_news.xml
+++ b/app/src/main/res/layout/fragment_search_news.xml
@@ -18,7 +18,7 @@
             android:id="@+id/etSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Search..."
+            android:hint="Cari..."
             android:drawableStart="@android:drawable/ic_menu_search"
             app:layout_constraintEnd_toEndOf="@id/cvNews"
             android:background="@color/cardview_light_background"
