--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -63,6 +63,7 @@
                 android:layout_marginTop="8dp"
                 android:backgroundTint="#000000"
                 android:ems="10"
+                android:hint="nama"
                 android:inputType="textPersonName"
                 android:paddingStart="10dp"
                 android:text=""
@@ -78,6 +79,7 @@
                 android:layout_marginTop="15dp"
                 android:fontFamily="sans-serif"
                 android:text="Email"
+
                 android:textColor="#9C9C9C"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -92,6 +94,7 @@
                 android:layout_marginTop="10dp"
                 android:backgroundTint="#000000"
                 android:ems="10"
+                android:hint="@string/email"
                 android:inputType="textPersonName"
                 android:paddingStart="10dp"
                 android:text=""
@@ -121,6 +124,7 @@
                 android:layout_marginTop="10dp"
                 android:backgroundTint="#000000"
                 android:ems="10"
+                android:hint="minimal 6 karakter"
                 android:inputType="textPassword"
                 android:paddingStart="10dp"
                 android:text=""
@@ -136,6 +140,7 @@
                 android:layout_marginTop="15dp"
                 android:fontFamily="sans-serif"
                 android:text="Retype Password"
+
                 android:textColor="#9C9C9C"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -150,6 +155,7 @@
                 android:layout_marginTop="10dp"
                 android:backgroundTint="#000000"
                 android:ems="10"
+                android:hint="konfirmasi password"
                 android:inputType="textPassword"
                 android:paddingStart="10dp"
                 android:text=""
