--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,15 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/breakingNewsFragment"
-        android:title="Breaking News"
-        android:icon="@drawable/ic_breaking_news" />
+        android:title="Berita terkini"
+        android:icon="@drawable/ic_home_black_24dp" />
 
     <item android:id="@+id/savedNewsFragment"
-        android:title="Saved News"
+        android:title="Favorit"
         android:icon="@drawable/ic_favorite" />
 
     <item android:id="@+id/searchNewsFragment"
-        android:title="Search News"
-        android:icon="@drawable/ic_all_news" />
+        android:title="Cari"
+        android:icon="@drawable/ic_baseline_search_24" />
+
+    <item android:id="@+id/ProfileFragment"
+        android:title="Tentang"
+        android:icon="@drawable/ic_baseline_announcement_24" />
 
 </menu>
